# 2D-Game

./: CMakeLists.txt  block_info.h  globals.h  graphics.cpp  graphics.h  handle_input.cpp  handle_input.h  loading.cpp  loading.h  main.cpp  transitions.cpp  transitions.h  utils.cpp  utils.h
maps/: map1.txt  map2.txt  map3.txt  map4.txt
